# yew-axum-app

./: .dockerignore  Dockerfile  Justfile  LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
common/src/: config.rs  url.rs
frontend/: Cargo.toml  Trunk.toml  index.html  input.css  tailwind.config.js
frontend/src/: config.rs  main.rs
frontend/src/component/: loader.rs
