[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20" }
tracing-subscriber = { version = "0.3", features = ["env-filter"]}
tower-http = { version = "0.4.4", features = ["trace", "fs"] }
tower = { version = "0.4.13" }
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1"
regex = { version = "1.9.5" }
common = { path = "../common" }
